--- a/transaction/package.json
+++ b/transaction/package.json
@@ -6,11 +6,14 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "drizzle-orm": "^0.29.3",
     "elysia": "latest",
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "postgres": "^3.4.3"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "drizzle-kit": "^0.20.14"
   },
   "module": "src/index.js"
 }
