--- a/transaction/package.json
+++ b/transaction/package.json
@@ -9,9 +9,10 @@
     "drizzle-orm": "^0.29.3",
     "elysia": "latest",
     "kafkajs": "^2.2.4",
-    "postgres": "^3.4.3"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
+    "@types/pg": "^8.11.0",
     "bun-types": "latest",
     "drizzle-kit": "^0.20.14"
   },
