--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+    volumes:
+      - ./scripts/db.sql:/docker-entrypoint-initdb.d/db.sql
+      - dbdata:/var/lib/postgresql/data
+
   zookeeper:
     image: confluentinc/cp-zookeeper:5.5.3
     environment:
